Updated website content

--- a/about.html
+++ b/about.html
@@ -16,7 +16,31 @@
         </nav>
     </header>
     <main>
-        <p>A short bio about yourself, your interests, and your background.</p>
+        <p>
+            My name is Ashutosh Tripathi, and I am a final-year Bachelor of Technology student in Electronics Engineering at the Rajiv Gandhi Institute of Petroleum Technology, India, with a CGPA of 8.10.
+            I am writing to express my keen interest in pursuing a PhD under your esteemed supervision.
+        </p>
+        <p>
+            Throughout my studies, I have honed my programming skills in Python and C, gaining proficiency in libraries such as NumPy, Pandas, TensorFlow, Scikit-learn, and PyTorch.
+            I have hands-on experience developing AI models, deep learning applications, and leveraging tools like Power BI and FastAPI for data analysis and solution deployment.
+        </p>
+        <p>
+            As a research assistant at institutions like The University of Hong Kong and Nanyang Technological University, Singapore, I worked on analyzing large language models (LLMs) and designing federated learning algorithms for cross-domain tasks.
+            My research extended to video classification and multimodal fusion, where I explored attention-based architectures for improved model performance.
+        </p>
+        <p>
+            I have co-authored 10 papers for conferences such as AAAI and ICDM, and journals like TMLR and Applied Soft Computing. Notably, I published work in the MICCAI 2024 conference and IEEE Transactions on Consumer Electronics, focusing on federated learning and medical image classification:
+            <ul>
+                <li><strong>MICCAI 2024:</strong> <em>FedMRL: Data Heterogeneity Aware Federated Multi-agent Deep Reinforcement Learning for Medical Imaging</em></li>
+                <li><strong>IEEE Transactions on Consumer Electronics:</strong> <em>AdaFedProx: A Heterogeneity-Aware Federated Deep Reinforcement Learning for Medical Image Classification</em></li>
+            </ul>
+        </p>
+        <p>
+            Beyond research, I have led projects such as developing a CNN-based handwritten character recognition model and a heart disease prediction system using deep neural networks. I also worked on AI-based IoT applications and reinforcement learning models for UAV systems.
+        </p>
+        <p>
+            I am confident that my research experience and technical skills would allow me to contribute effectively to your research group. 
+        </p>
     </main>
 </body>
 </html>
