--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
         </nav>
     </header>
     <main>
-        <p>Email: your.email@example.com</p>
-        <p>Twitter: <a href="https://twitter.com/yourprofile">@yourprofile</a></p>
+        <p>Email: <a href="mailto:ashutoshtripathi191@gmail.com">ashutoshtripathi191@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/ashu191/">Your LinkedIn Profile</a></p>
     </main>
 </body>
 </html>
