--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+    <title>Ashutosh Tripathi</title>
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>A brief introduction about yourself.</p>
+        <h1>Ashutosh Tripathi</h1>
+        <p>Final-year B.Tech student in Electronics Engineering</p>
         <nav>
             <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
@@ -18,7 +18,7 @@
     </header>
     <main>
         <h2>Welcome to My Personal Website!</h2>
-        <p>Here you can find my work and projects.</p>
+        <p>I am passionate about AI, deep learning, and research.</p>
     </main>
 </body>
 </html>
