--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,10 @@
     </header>
     <main>
         <ul>
-            <li><a href="https://link-to-project1.com">Project 1</a> - Description of Project 1.</li>
-            <li><a href="https://link-to-project2.com">Project 2</a> - Description of Project 2.</li>
+            <li>CNN-based handwritten character recognition model</li>
+            <li>Heart disease prediction system using deep neural networks</li>
+            <li>AI-based IoT applications</li>
+            <li>Reinforcement learning models for UAV systems</li>
         </ul>
     </main>
 </body>
