--- a/index.html
+++ b/index.html
@@ -9,16 +9,33 @@
 <body>
     <header>
         <h1>Ashutosh Tripathi</h1>
-        <p>Final-year B.Tech student in Electronics Engineering</p>
         <nav>
             <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
+            <a href="projects.html">Publications</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
-        <h2>Welcome to My Personal Website!</h2>
-        <p>I am passionate about AI, deep learning, and research.</p>
+        <div class="content-wrapper">
+            <div class="text-section">
+                <h2>Welcome to My Personal Website!</h2>
+                <p>I am passionate about research in Federated learning, medical imaging, distributed LLMs, and Reinforcement learning.</p>
+
+                <!-- News Section -->
+                <section>
+                    <h2>News</h2>
+                    <ul>
+                        <li><strong>Sep 11, 2024</strong> - Our paper accepted to IEEE Transactions on Consumer Electronics <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10681112" target="_blank">(paper)</a>.</li>
+                        <li><strong>June 16, 2024</strong> - Our paper accepted to MICCAI 2024 conference <a href="https://arxiv.org/pdf/2407.05800" target="_blank">(paper)</a>.</li>
+                    </ul>
+                </section>
+            </div>
+            
+            <!-- Photo Section -->
+            <div class="photo-section">
+                <img src="C:/Users/Lenovo/Desktop/New folder/Resume/WhatsApp.jpg" alt="Ashutosh Tripathi">
+            </div>
+        </div>
     </main>
 </body>
 </html>
