--- a/projects.html
+++ b/projects.html
@@ -17,11 +17,11 @@
     </header>
     <main>
         <ul>
-            <li>CNN-based handwritten character recognition model</li>
-            <li>Heart disease prediction system using deep neural networks</li>
-            <li>AI-based IoT applications</li>
-            <li>Reinforcement learning models for UAV systems</li>
-        </ul>
+                        <li><strong>FedMRL: Data Heterogeneity Aware Federated Multi-agent Deep Reinforcement Learning for Medical Imaging</strong> – Accepted at the 27th International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) (Core rank A). <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10681112" target="_blank">(paper)</a></li>
+
+                        <li><strong>AdaFedProx: A Heterogeneity-Aware Federated Deep Reinforcement Learning for Medical Image Classification</strong> – Accepted to IEEE Transactions on Consumer Electronics (IF:4.3). <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10681112" target="_blank">(paper)</a></li>
+
+
     </main>
 </body>
 </html>
