--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Alternative Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Contact</title>
 </head>
@@ -16,8 +18,10 @@
         </nav>
     </header>
     <main>
-        <p>Email: <a href="mailto:ashutoshtripathi191@gmail.com">ashutoshtripathi191@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/ashu191/">Your LinkedIn Profile</a></p>
+        <p>Email: <a href="mailto:ashutoshtripathi191@gmail.com"><i class="fas fa-envelope"></i></a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/ashu191/" target="_blank"><i class="fab fa-linkedin"></i></a></p>
+        <p>Google Scholar: <a href="https://scholar.google.com/citations?user=9ocag4gAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a></p>
+        <p>GitHub: <a href="https://github.com/Ashutoshtripathi1234" target="_blank"><i class="fab fa-github"></i></a></p>
     </main>
 </body>
 </html>
