--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <!-- Photo Section -->
             <div class="photo-section">
-                <img src="C:/Users/Lenovo/Desktop/New folder/Resume/WhatsApp.jpg" alt="Ashutosh Tripathi">
+                <img src="WhatsApp.jpg" alt="Ashutosh Tripathi">
             </div>
         </div>
     </main>
